--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -1,4 +1,5 @@
 python_module: ndnkdf
 python_source_directory: ndnkdf
-publish_over_ssh: pypi.sunet.se
+publish_over_ssh:
+  - pypi.sunet.se
 clean_workspace: true
