--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
-*.pyc
-*~
-.*~
-*.egg-info
 .coverage
-\#*
-.\#*
-tmp
-build
-dist
+.tox
+__pycache__
+*.egg
+*.egg-info
+*.pyc
+*.pyo
+.*.swp
+.*.swo
+*~
+*#
+build/
+dist/
+sessions/
+env
+venv/
+nosetests.xml
+coverage.xml
+.idea/
+revision.txt
+.mypy_cache
