--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -1,5 +1,19 @@
+builders:
+  - script
+triggers:
+  cron: "@weekly"
+slack:
+  room: "eduid-builds"
 python_module: ndnkdf
-python_source_directory: ndnkdf
 publish_over_ssh:
   - pypi.sunet.se
 clean_workspace: true
+
+script:
+  - "python3.7 -m venv venv"
+  - ". venv/bin/activate"
+  - "pip install -U setuptools wheel mypy"
+  - "pip install --index-url https://pypi.sunet.se -r test_requirements.txt"
+  - "pip freeze"
+  - "make test"
+  - "make typecheck"
