--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -1,14 +1,9 @@
-builders:
-  - script
+publish_over_ssh:
+  - pypi.sunet.se
 triggers:
   cron: "@weekly"
 slack:
   room: "eduid-builds"
-python_module: ndnkdf
-publish_over_ssh:
-  - pypi.sunet.se
-clean_workspace: true
-
 script:
   - "python3.7 -m venv venv"
   - ". venv/bin/activate"
@@ -17,3 +12,5 @@ script:
   - "pip freeze"
   - "make test"
   - "make typecheck"
+  - "python setup.py sdist bdist_wheel --universal"
+clean_workspace: true
